--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Micael Cruz",
   "license": "ISC",
   "dependencies": {
+    "fs": "^0.0.1-security",
     "venom-bot": "^5.0.19"
   }
 }
